# priming-stream

./: .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  LICENSE  README.md  SETUP.md  coldstart-example.toml  conftest.py  pyproject.toml  speed_test.py
.github/workflows/: ci.yml
config/: record_markers.toml  settings.toml
docs/: desktop-project-instruction.md  embedding-options.md
prompts/: extract_record.md  extract_subagent.md
scripts/: sleep_auto.cmd  sleep_auto_task.xml
src/priming_stream/: __init__.py
tests/core/: test_episodic.py  test_fixtures.py  test_paths.py
tests/fixtures/: claim_reconcile_pairs.jsonl  expected_chunk.json  synthetic_session.jsonl
tests/ingest/: test_claude_code.py
tests/v07x/: conftest.py  test_card_reconcile.py  test_claim_reconcile.py  test_clean.py  test_cli_daemon.py  test_coldstart_no_llm.py  test_daemon_client.py  test_daemon_lifecycle.py  test_daemon_reload_cross_process.py  test_daemon_reload_endpoint.py  test_daemon_reload_failure_keeps_old_state.py  test_daemon_reload_in_flight.py  test_daemon_render.py  test_daemon_server.py  test_dashboard.py  test_doc_ingest.py  test_echoes.py  test_extract_prompt.py  test_extract_subagent_prompt.py  test_fallback_lexical.py  test_fts5_schema.py  test_graph_ops.py  test_graph_repo.py  test_hook_prev_seed.py  test_hook_thin_imports.py  test_hook_userpromptsubmit.py  test_ingest_source.py  test_lexical_bucket.py  test_materialize.py  test_mcp_bridge_unification.py  test_mcp_chunk_around.py  test_mcp_server.py  test_p0_fixes.py  test_priming_dedup.py  test_produced_docs.py  (+21 more)
(+76 files in other folders)
